--- a/index.html
+++ b/index.html
@@ -168,16 +168,15 @@ body {font-family: Arial;}
             <div class="row">
                 <div class="col-md-1"></div>
                 <div class="col-md-10 node_data_table" style="overflow-y: scroll;max-height: 200px;min-height: 50px">
-                    <table class="table table-striped">
+                    <table class="table table-striped" id="dataTable">
                       <thead>
                         <tr>
                           <th>Stn Id</th>
                           <th>Sensor Id</th>
-                          <th>DateTime</th>
                           <th>Reading</th>
                         </tr>
                       </thead>
-                      <tbody class="table_data">
+                      <tbody id="table_data">
 
                       </tbody>
                     </table>
@@ -213,7 +212,7 @@ body {font-family: Arial;}
                             </div> -->
                         </div>
                         <!-- /.panel-heading -->
-                        <div class="panel-body" id="chart">
+                        <div id="chart">
                             <!--<div id="chart" width="200px" height="200px"></div> -->
                         </div>
                         <!-- /.panel-body -->
