gauge working with materialize toast

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!-- <div id="gauges" class="col s2">
       <canvas id='he'></canvas>
     </div> -->
-    <div class="col s6">
+    <div id="viz" class="col s6">
 
     </div>
   </div>
