--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="card-panel grey lighten-5 z-depth-1">
           <div class="row valign-wrapper">
             <div class="col s2">
-              <img href="https://github.com/omshinde" src="images/rajat.jpg" alt="" class="circle responsive-img" width='30' height='30'> <!-- notice the "circle" class -->
+              <img href="https://github.com/omshinde" src="https://github.com/daas-ankur-shukla/SOSClient/blob/master/images/rajat.jpg" alt="" class="circle responsive-img" width='30' height='30'> <!-- notice the "circle" class -->
             </div>
             <div class="col s10">
               <span class="black-text">
@@ -75,7 +75,7 @@
           <div class="card-panel grey lighten-5 z-depth-1">
             <div class="row valign-wrapper">
               <div class="col s2">
-                <img href="https://github.com/daas-ankur-shukla" src="images/ankur.jpg" alt="" class="circle responsive-img" width='30' height='30'> <!-- notice the "circle" class -->
+                <img href="https://github.com/daas-ankur-shukla" src="https://github.com/daas-ankur-shukla/SOSClient/blob/master/images/ankur.jpg" alt="" class="circle responsive-img" width='30' height='30'> <!-- notice the "circle" class -->
               </div>
               <div class="col s10">
                 <span class="black-text">
@@ -89,7 +89,7 @@
             <div class="card-panel grey lighten-5 z-depth-1">
               <div class="row valign-wrapper">
                 <div class="col s2">
-                  <img href="https://github.com/pan111" src="images/pankaj.png" alt="" class="circle responsive-img" width='30' height='30'> <!-- notice the "circle" class -->
+                  <img href="https://github.com/pan111" src="https://github.com/daas-ankur-shukla/SOSClient/blob/master/images/pankaj.png" alt="" class="circle responsive-img" width='30' height='30'> <!-- notice the "circle" class -->
                 </div>
                 <div class="col s10">
                   <span class="black-text">
