--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.Default.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.4.2/leaflet.draw.css"/>
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -23,6 +25,7 @@
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.4.2/leaflet.draw.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flot/0.8.3/jquery.flot.js"></script>
 
 
     <meta charset="utf-8">
@@ -100,7 +103,7 @@ body {font-family: Arial;}
 
 #chart {
     width: auto;
-    height: 250px;
+    height: 350px;
 
 }
 
@@ -168,7 +171,7 @@ body {font-family: Arial;}
             <div class="row">
                 <div class="col-md-1"></div>
                 <div class="col-md-10 node_data_table" style="overflow-y: scroll;max-height: 200px;min-height: 50px">
-                    <table class="table table-striped" id="dataTable">
+                    <table class="table highlight" id="dataTable">
                       <thead>
                         <tr>
                           <th>Stn Id</th>
@@ -183,11 +186,11 @@ body {font-family: Arial;}
                 </div>
                 <div class="col-md-1"></div>
             </div>
+            <br>
             <!-- 3rd row: charts -->
             <div class="row">
                 <div class="col-md-1"></div>
-                <div class="col-md-10" >
-                    <div class="panel panel-default">
+                    <div class=" col-md-10 panel panel-default">
                         <div class="panel-heading">
                             <select id="chartPropSelect" >
                                 <option value="RESET" selected>All Properties</option>
@@ -200,16 +203,6 @@ body {font-family: Arial;}
                                 <option value="waves">Waves</option>
                                 <option value="winds">Winds</option>
                             </select>
-                            <!-- <div class="tab btn-group">
-                                <button class="tablinks btn-xs" onclick="displayAnalytics('sea_floor_depth_below_sea_surface')">Sea Floor Depth Below Sea Surface</button>
-                                <button class="tablinks btn-xs" onclick="displayAnalytics('air_pressure_at_sea_level')">Air Pressure At Sea Level</button>
-                                <button class="tablinks btn-xs" onclick="displayAnalytics('sea_water_temperature')">Sea Water Temperature</button>
-                                <button class="tablinks btn-xs" onclick="displayAnalytics('sea_water_salinity')">Sea Water Salinity</button>                  
-                                <button class="tablinks btn-xs" onclick="displayAnalytics('air_temperature')">Air Temperature</button> 
-                                <button class="tablinks btn-xs" onclick="displayAnalytics('currents')">Currents</button>         
-                                <button class="tablinks btn-xs" onclick="displayAnalytics('waves')">Waves</button>
-                                <button class="tablinks btn-xs" onclick="displayAnalytics('winds')">Winds</button>
-                            </div> -->
                         </div>
                         <!-- /.panel-heading -->
                         <div id="chart">
@@ -217,7 +210,6 @@ body {font-family: Arial;}
                         </div>
                         <!-- /.panel-body -->
                     </div>
-                </div>
                 <div class="col-md-1"></div>
             </div>
         </div>
